Details
-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.6
-
None
-
e388d219a (dev), 080f2654b (6.5)
-
Foundation Sprint 76
Description
In file included from /home/tjmaciei/src/qt/qt6-release/qtbase/src/corelib/tools/qcryptographichash.cpp:119: /usr/include/openssl/sha.h:55:72: error: ‘unsigned char* SHA1(const unsigned char*, size_t, unsigned char*)’ redeclared as different kind of entity 55 | unsigned char *SHA1(const unsigned char *d, size_t n, unsigned char *md); | ^ In file included from /home/tjmaciei/src/qt/qt6-release/qtbase/src/corelib/tools/qcryptographichash.cpp:23: /home/tjmaciei/src/qt/qt6-release/qtbase/src/corelib/tools/../../3rdparty/rfc6234/sha.h:123:5: note: previous declaration ‘SHAversion SHA1’ 123 | SHA1, SHA224, SHA256, SHA384, SHA512 | ^~~~
Attachments
Issue Links
- resulted in
-
QTBUG-111525 Can't link to OpenSSL3 when OpenSSL1.1 is installed
-
- Closed
-
For Gerrit Dashboard: QTBUG-111467 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
462835,5 | QCryptographicHash: don't include openssl/sha.h | dev | qt/qtbase | Status: MERGED | +2 | 0 |
462985,2 | QCryptographicHash: don't include openssl/sha.h | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |